# contracts/post-trip.openapi.yaml
@@ -56,6 +56,19 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/AddTripPhotoRequest'
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - file
+              properties:
+                file:
+                  type: string
+                  format: binary
+                caption:
+                  type: string
+                location_name:
+                  type: string
       responses:
         '201':
           description: Photo added to album
